Testing out 1 hour candles vs 5 min